# bachelor_vulkan_renderer

./: CMakeLists.txt  README.md  main.cpp
sources/: CMakeLists.txt  main.cpp
sources/application/: CMakeLists.txt  application_base.cpp  application_base.h  double_screenshot_application.cpp  double_screenshot_application.h  offscreen_rendering_application.cpp  offscreen_rendering_application.h
sources/camera/: CMakeLists.txt  camera.h  fps_camera.cpp  fps_camera.h
sources/command_buffer/: CMakeLists.txt  command_buffer.cpp  command_buffer.h
sources/config/: config.h
sources/debug_messenger/: CMakeLists.txt  debug_messenger.cpp  debug_messenger.h  debug_messenger_utils.cpp  debug_messenger_utils.h
sources/descriptor_set/: CMakeLists.txt  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets_aggregator.cpp  descriptor_sets_aggregator.h
sources/entity_component_system/: CMakeLists.txt  archetype.h  component_manager.h  entity_component_system.cpp  entity_component_system.h  entity_manager.cpp  entity_manager.h
sources/entity_component_system/component/: CMakeLists.txt  archetype.cpp  archetype.h  component.cpp  component.h  component_pool.h  component_storage.h  material.h  mesh.h  position.h  transform.h  velocity.h
sources/entity_component_system/entity/: CMakeLists.txt  entity.h  entity_manager.cpp  entity_manager.h
sources/entity_component_system/registry/: CMakeLists.txt  registry.cpp  registry.h
sources/entity_component_system/system/: CMakeLists.txt  movement_system.cpp  movement_system.h  system.h
sources/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
sources/image/: CMakeLists.txt  image.h
sources/instance/: CMakeLists.txt  instance.cpp  instance.h
sources/lib/buffer/: buffer.h
sources/lib/types/: strong_int.h
sources/logical_device/: CMakeLists.txt  logical_device.cpp  logical_device.h
sources/memory_allocator/: CMakeLists.txt  memory_allocator.cpp  memory_allocator.h
sources/memory_objects/: CMakeLists.txt  buffer.cpp  buffer.h  buffers.cpp  buffers.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  staging_buffer.h  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
sources/memory_objects/image/: CMakeLists.txt  image_color.cpp  image_color.h  image_depth.cpp  image_depth.h
sources/memory_objects/texture/: CMakeLists.txt  image.h  texture.cpp  texture.h  texture2D_attachment.cpp  texture2D_attachment.h  texture_2D.cpp  texture_2D.h  texture_2D_color.cpp  texture_2D_color.h  texture_2D_depth.cpp  texture_2D_depth.h  texture_2D_image.cpp  texture_2D_image.h  texture_2D_sampler.cpp  texture_2D_sampler.h  texture_2D_shadow.cpp  texture_2D_shadow.h  texture_attachment.cpp  texture_attachment.h  texture_cubemap.cpp  texture_cubemap.h  texture_factory.cpp  texture_factory.h  texture_sampler.cpp  texture_sampler.h
sources/memory_objects/uniform_buffer/: CMakeLists.txt  push_constants.cpp  push_constants.h  uniform_buffer.h  uniform_buffer_layout.cpp  uniform_buffer_layout.h
sources/model_loader/: CMakeLists.txt  model_loader.cpp  model_loader.h
sources/model_loader/image_loader/: image_loader.cpp  image_loader.h
sources/model_loader/obj_loader/: CMakeLists.txt  obj_loader.cpp  obj_loader.h
sources/model_loader/tiny_gltf_loader/: CMakeLists.txt  tiny_gltf_loader.cpp  tiny_gltf_loader.h
sources/object/: CMakeLists.txt  object.cpp  object.h  volumes.cpp  volumes.h
sources/physical_device/: CMakeLists.txt  features.cpp  features.h  physical_device.cpp  physical_device.h  property_manager.cpp  property_manager.h
sources/physical_device/device/: CMakeLists.txt  physical_device.cpp  physical_device.h
sources/physical_device/features/: CMakeLists.txt  features.cpp  features.h
sources/physical_device/property_manager/: CMakeLists.txt  property_manager.cpp  property_manager.h
sources/pipeline/: CMakeLists.txt  compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline.cpp  pipeline.h  shader_utils.cpp  shader_utils.h
sources/pipeline/shader/: CMakeLists.txt  shader.cpp  shader.h  shader_program.cpp  shader_program.h  shader_utils.cpp  shader_utils.h
sources/primitives/: CMakeLists.txt  geometry.cpp  geometry.h  primitives.h  vk_primitives.h
sources/render_pass/: CMakeLists.txt  render_pass.cpp  render_pass.h
sources/render_pass/attachment/: CMakeLists.txt  attachment.h  attachment_factory.cpp  attachment_factory.h  attachment_layout.cpp  attachment_layout.h  attachment_type.h
sources/render_pass/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  framebuffer_from_swapchain.cpp  framebuffer_from_swapchain.h  framebuffer_from_textures.cpp  framebuffer_from_textures.h
sources/render_pass/subpass/: CMakeLists.txt  subpass.cpp  subpass.h
sources/resource_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  resource_manager.cpp  resource_manager.h
sources/scene/: CMakeLists.txt
sources/scene/octree/: octree.cpp  octree.h
sources/screenshot/: CMakeLists.txt  screenshot.cpp  screenshot.h
sources/surface/: CMakeLists.txt  surface.cpp  surface.h
sources/swapchain/: CMakeLists.txt  swapchain.cpp  swapchain.h
sources/swapchain/features/: CMakeLists.txt  swapchain_utils.cpp  swapchain_utils.h
sources/swapchain/resources/: color_resource.h
sources/swapchain/utils/: CMakeLists.txt  swapchain_utils.cpp
sources/tests/: CMakeLists.txt
sources/texture/utils/: texture_utils.cpp  texture_utils.h
sources/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
sources/util/: buffer.h
sources/utils/: CMakeLists.txt  utils.cpp  utils.h
sources/window/: CMakeLists.txt  vk_primitives_utils.h  window.cpp  window.h  window_callback.h
sources/window/callback_manager/: CMakeLists.txt  callback_manager.cpp  callback_manager.h  fps_callback_manager.cpp  fps_callback_manager.h
sources/window/callback_observer/: CMakeLists.txt  callback_observer.cpp  callback_observer.h
sources/window/window/: CMakeLists.txt  window.cpp  (+3 more)
tests/: CMakeLists.txt
(+28 files in other folders)
